MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/VirtualAccount__c.object-meta.xml
<CustomObject>
    <label>Virtual Account</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Virtual Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>