MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/Escrow_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Account_Name__c</fullName>
    <formula>EscrowAccount__r.AccountNumber__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Account Name</label>
    <type>Text</type>
</CustomField>