MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/Escrow_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Bank_Name__c</fullName>
    <formula>EscrowAccount__r.BankName__c</formula>
    <label>Escrow Bank Name</label>
    <type>Text</type>
</CustomField>