MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/Escrow_Branch_Name__c.field-meta.xml
<CustomField>
    <fullName>Escrow_Branch_Name__c</fullName>
    <formula>EscrowAccount__r.Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Escrow Branch Name</label>
    <type>Text</type>
</CustomField>