MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/EscrowAccount__c.field-meta.xml
<CustomField>
    <fullName>EscrowAccount__c</fullName>
    <label>Escrow Account</label>
    <referenceTo>EscrowAccount__c</referenceTo>
    <relationshipLabel>Virtual Accounts</relationshipLabel>
    <relationshipName>Virtual_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>