MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/ESCROWAccountName__c.field-meta.xml
<CustomField>
    <fullName>ESCROWAccountName__c</fullName>
    <formula>EscrowAccount__r.BeneficiaryName__c</formula>
    <label>ESCROW Account Name</label>
    <type>Text</type>
</CustomField>