MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/EscrowAccountNameText__c.field-meta.xml
<CustomField>
    <fullName>EscrowAccountNameText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Escrow Account Name Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>