MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/IsVirtualAccountNumberExist__c.field-meta.xml
<CustomField>
    <fullName>IsVirtualAccountNumberExist__c</fullName>
    <formula>NOT(ISBLANK( VirtualAccountNumber__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsVirtualAccountNumberExist</label>
    <type>Checkbox</type>
</CustomField>