MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Swift_Code__c</fullName>
    <formula>EscrowAccount__r.SwiftCode__c</formula>
    <label>Swift Code</label>
    <type>Text</type>
</CustomField>