MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <formula>EscrowAccount__r.SwiftCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Swift Code</label>
    <type>Text</type>
</CustomField>