MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/VirtualAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>VirtualAccountNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Virtual Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>