MODON MRE BPDEV/force-app/main/default/objects/VirtualAccount__c/fields/VirtualIBANNumber__c.field-meta.xml
<CustomField>
    <fullName>VirtualIBANNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Virtual IBAN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>